<resources>
    <string name="app_name">CakeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_API_key">AIzaSyA1rz16DQrCrva8voT07CEXCQIGJec_SAs</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="linkUtente">Oppure <a href="">clicca qui per accedere al tuo profilo!</a></string>
    <string name="facebook_app_id">2557729181125574</string>
    <string name="fb_login_protocol_scheme">fb2557729181125574</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cellulare">cellulare</string>
    <string name="numero_cellulare">numero_cellulare</string>
    <string name="e_mail">e_mail</string>
    <string name="password">password</string>
    <string name="biografia">biografia</string>
    <string name="nickname">nickname</string>
    <string name="textview">textview</string>
    <string name="fatti_conoscere_inserisci_qui_la_tua_biografia">fatti_conoscere_inserisci_qui_la_tua_biografia</string>
    <string name="example_nome_utente_gmail_com">example_nome_utente_gmail_com</string>
    <string name="accept">accept</string>
    <string name="nomeCompleto">nomeCompleto</string>
    <string name="accedi_o_registrati">Accedi o registrati</string>
    <string name="link"> Sei un cuoco?!\n<a href="">Clicca qui per accedere in area privata!</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scrivi_un_commento">Scrivi un commento...</string>
    <string name="commenta">Commenta</string>
    <string name="benvenuto">Benvenuto!</string>
    <string name="follower">Follower</string>
    <string name="segui">Segui</string>
</resources>
